<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:theme="@style/AccountTheme"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        style="@style/AccountTheme.Heading1"/>


    <android.support.design.widget.TextInputEditText
        android:id="@+id/nameField"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/name"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/emailField"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/passwordField"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/phoneField"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone"/>


    <Button
        android:id="@+id/submitButton"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"/>

</LinearLayout>