<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:theme="@style/AccountTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_phone"
        style="@style/AccountTheme.Heading1"/>


    <!--Phone number-->
    <android.support.design.widget.TextInputEditText
        android:id="@+id/phoneInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/phone"
        android:inputType="phone"
        tools:ignore="HardcodedText" />
    <Button
        android:id="@+id/resendVeritifation"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_verification"
        style="@style/AccountTheme.ButtonSmall"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_code"
        android:layout_marginTop="50dp"
        style="@style/AccountTheme.Heading2"/>

    <!--Code input-->
    <android.support.design.widget.TextInputEditText
        android:id="@+id/codeInput"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="40sp"
        android:textAlignment="center"
        android:lineSpacingExtra="5dp"
        android:maxLength="6"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"/>

</LinearLayout>