<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<com.mapbox.mapboxsdk.maps.MapView-->
        <!--android:id="@+id/mapView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_marginBottom="170dp"-->
        <!--mapbox:mapbox_cameraTargetLat="40.73581"-->
        <!--mapbox:mapbox_cameraTargetLng="-73.99155"-->
        <!--mapbox:mapbox_cameraZoom="11"-->
        <!--mapbox:mapbox_styleUrl="@string/mapbox_style_mapbox_streets">-->

    <!--</com.mapbox.mapboxsdk.maps.MapView>-->

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mapView"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="170dp"
        tools:context=".MapActivity" />

    <!--Share location Button-->
    <Button
        android:id="@+id/shareLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="258dp"
        android:text="@string/shareloc" />

    <Button
        android:id="@+id/stopShareLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="258dp"
        android:text="@string/stopShareLoc"
        android:visibility="gone" />

    <!--Logout button-->
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:text="@string/logout" />

    <!--Zoom label-->
    <Button
        android:id="@+id/zoomLabelView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_toStartOf="@+id/logoutButton" />

    <!--Center button-->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/centerMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/grey"
        android:src="@drawable/ic_gps_fixed_black_24dp"
        android:tint="@android:color/white" />

    <!--Fit to screen button-->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fittoScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/centerMe"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/grey"
        android:src="@drawable/ic_zoom_out_map_black_24dp"
        android:tint="@android:color/white" />

    <!-- HeatMap Control Panel-->
    <com.gradient.mapbox.mapboxgradient.Views.HeatmapControlPanelView
        android:id="@+id/heatmapPanel"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true">

    </com.gradient.mapbox.mapboxgradient.Views.HeatmapControlPanelView>
</RelativeLayout>